<resources>
    <string name="app_name">GJ Multiclave</string>
    <string name="loading">Loading.....</string>
    <string name="lbl_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Log In</string>
    <string name="txtView_lat_invisible">Latitude</string>
    <string name="txtView_lon_invisible">Longitude</string>
    <string name="btn_punchIn">PUNCH IN</string>
    <string name="btn_mySchedules">MY SCHEDULE</string>
    <string name="btn_punchOut">PUNCH OUT</string>
    <string name="hint_schedule_date">Schedule Date</string>
    <string name="hint_schedule_list">Scheduled List</string>
    <string name="btn_map_view">Map View</string>
    <string name="btn_attendance">Attendance</string>
    <string name="btn_time_card">View Time Card</string>
    <string name="btn_not_visit">Not Visited</string>
    <string name="btn_exit_report">Exit &amp; Report</string>
    <string name="btn_enter">Visit</string>
    <string name="full_colon">:</string>
    <string name="txtView_employee">Employee</string>
    <string name="txtView_schedule">Schedule</string>
    <string name="txtView_hospital">Hospital </string>
    <string name="txtView_aff_no">Aff No </string>
    <string name="txtView_remark">Remark : </string>
    <string name="txtView_segregation">Segregation </string>
    <string name="txtView_yes">Yes </string>
    <string name="txtView_no">No </string>
    <string name="txtView_dis">Properly used colour coded bags and buckets </string>
    <string name="txtView_bag">Bags Tide properly </string>
    <string name="txtView_metal">Metal and sharps properly segregated </string>
    <string name="txtView_needle">Needle burned properly </string>
    <string name="txtView_waste">Waste sharps disinfected </string>
    <string name="txtView_bmw">BMW properly segregated </string>
    <string name="txtView_bag_misused">Whether yellow &amp; red bags misused </string>
    <string name="txtView_waste_treated">Whether laboratory waste pre-treated</string>
    <string name="txtView_needle_destroy">Whether needles destroyed/using tamper proof container</string>
    <string name="txtView_token_no">Token No </string>
    <string name="checkbox_affiliation">Affiliation </string>
    <string name="checkbox_training">Training </string>
    <string name="checkbox_retraining">Retraining </string>
    <string name="checkbox_bForm">BForm </string>
    <string name="checkbox_office_work">Office Work </string>
    <string name="checkbox_marketing">Marketing </string>
    <string name="checkbox_payment_followup">Payment Followup </string>
    <string name="checkbox_medicine_collection">Medicine Collection </string>
    <string name="checkbox_new_verification">New Verification </string>
    <string name="checkbox_re_verification">Re-Verification </string>
    <string name="checkbox_supply">Supply </string>
    <string name="checkbox_supervisor_duty">Supervisor Duty </string>
    <string name="checkbox_meeting">Meeting </string>
    <string name="checkbox_training_assistant">Training Assistant </string>
    <string name="checkbox_inCharge">InCharge Duty </string>
    <string name="checkbox_qr_code_supply">QR Code Supply </string>
    <string name="checkbox_dist_rep_meeting">Dist Rep Meeting </string>
    <string name="checkbox_others">Others </string>
    <string name="follow_up">Follow Up </string>
    <string name="purpose">Purpose </string>
    <string name="type">Type </string>
    <string name="status">Status </string>
    <string name="mySchID">MySchID </string>
    <string name="training_date">Training Date </string>
    <string name="start_time">Start Time </string>
    <string name="end_time">End Time </string>
    <string name="no_of_attendee">NoOfAttendee </string>
    <string name="sessions">Sessions </string>
    <string name="assistance">Assistance </string>
    <string name="action_refresh">Refresh </string>
    <string name="action_logout">Logout </string>
    <string name="action_about">About </string>
</resources>
