<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/popup_element2"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/txtView_token_no"
            android:textColor="#000000"
            android:textSize="21sp" />

        <TextView
            android:layout_width="10sp"
            android:layout_height="20sp"
            android:text="@string/full_colon"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txttoken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLength="30"
            android:editable="false"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/remarksTextView"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/txtView_remark"
            android:textColor="#000000"
            android:textSize="21sp" />
        <EditText
            android:id="@+id/txtVerificationRemarks"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:minHeight="20sp"
            android:textColor="#000000"
            android:textSize="21sp" />

    </LinearLayout>

</LinearLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<!--</LinearLayout>-->
